force-app/main/default/objects/KimbleOne__ResourceProfileCriterion__c/KimbleOne__ResourceProfileCriterion__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Resource Profile Criterion</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>ResourceProfileCriterionId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Profile Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>