force-app/main/default/objects/KimbleOne__ResourceProfileCriterion__c/fields/KimbleOne__FieldName__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__FieldName__c</fullName>
    <label>Field Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>