force-app/main/default/objects/KimbleOne__ResourceProfileCriterion__c/fields/KimbleOne__FieldValue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__FieldValue__c</fullName>
    <label>Field Value</label>
    <length>32678</length>
    <type>LongTextArea</type>
</CustomField>