force-app/main/default/objects/KimbleOne__ResourceProfileCriterion__c/fields/KimbleOne__Operator__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Operator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operator</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>Operator</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Resource Profile Criteria</relationshipLabel>
    <relationshipName>ResourceProfileCriteria</relationshipName>
    <type>Lookup</type>
</CustomField>