force-app/main/default/objects/KimbleOne__ResourceProfileCriterion__c/fields/KimbleOne__ResourceProfile__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ResourceProfile__c</fullName>
    <label>Resource Profile</label>
    <referenceTo>KimbleOne__ResourceProfile__c</referenceTo>
    <relationshipLabel>Resource Profile Criteria</relationshipLabel>
    <relationshipName>ResourceProfileCriteria</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>